[FIX] mail: better visual of discuss sidebar and chat hub options
Discuss sidebar options button was too shy on action mouse-hover
when not active. This commit improves the mouse-hover effect.

The chat hub options button had global opacity when not being used,
which made it hard to see when there's content below. The hover
effect was also lacking. This commit improves to have opacity
change only on icon and not background, and the hover effect is
made more obvious.

Chat hub options were not dropdown items, thus keyboard navigation
didn't work. Discuss dropdown menu use dropdown item for keyboard
navigation, so this was weird to be a rare menu without it. This
commit turned the buttons into `<DropdownItem>`.

X-original-commit: e996aae5a2f9ac8fbdac6f3533328b751756e32c

--- a/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
+++ b/addons/mail/static/src/discuss/core/public_web/discuss_sidebar_categories.scss
@@ -43,12 +43,9 @@ $o-mail-DiscussSidebarChannel-borderOpacity: .05;
 
 .o-mail-DiscussSidebarChannel-actions button {
     opacity: 35%;
+    --border-opacity: .15;
 
-    &:hover {
-        opacity: 100%;
-    }
-
-    &.o-showingActions {
+    &:hover, &.o-showingActions {
         opacity: 100%;
         --border-opacity: .25;
     }
